# NeoOS

./: .gitignore  Cargo.toml  Chapter0 前言.md  Chapter0_1 仓库布局.md  Chapter1 准备与环境配置.md  Chapter2_1 qemu.md  Chapter2_3 bootloader.md  Chapter2_3 kernel.md  Chapter3 进程切换.md  Chapter4 文件系统.md  LICENSE  Makefile  README.md  SUMMARY.md  boot.cfg  prepare_darwin.sh  rust-toolchain  test_jump.S  x.py
NeoOS-lab2/: x.py
NeoOS-lab2/boot/: Cargo.toml
NeoOS-lab2/boot/src/: main.rs  page_table.rs  utils.rs
NeoOS-lab2/boot_header/: Cargo.toml
NeoOS-lab2/boot_header/src/: lib.rs
NeoOS-lab2/kernel/src/: f32.rs  lib.rs  main.rs
NeoOS-lab2/kernel/src/arch/x86_64/: hpet.rs
NeoOS-lab2/kernel/src/drivers/: intel_e1000.rs  pci_bus.rs
NeoOS-lab2/kernel/src/drivers/isomorphic_drivers/: mod.rs
NeoOS-lab2/kernel/src/fs/: file.rs
NeoOS-lab2/kernel/src/fs/apfs/: btree.rs  meta.rs
NeoOS-lab2/kernel/src/fs/devfs/: mod.rs
NeoOS-lab2/kernel/src/net/: raw.rs
NeoOS-lab2/kernel/src/process/: mod.rs  scheduler.rs  thread.rs
NeoOS-lab2/kernel/src/signal/: mod.rs
NeoOS-lab2/kernel/src/sys/: mod.rs
NeoOS-lab2/kernel/src/syscall/: fs.rs  process.rs
NeoOS-lab2/kernel/src/utils/: mod.rs  ptr.rs
NeoOS-lab3/: .gitignore  Makefile
NeoOS-lab3/boot/src/: utils.rs
NeoOS-lab3/kernel/: Cargo.toml
NeoOS-lab3/kernel/src/: debug.rs  f32.rs  lib.rs
NeoOS-lab3/kernel/src/drivers/: keyboard.rs  mod.rs  rtc.rs
NeoOS-lab3/kernel/src/fs/: mod.rs  sfs.rs
NeoOS-lab3/kernel/src/process/: ld.rs  mod.rs  scheduler.rs  thread.rs
NeoOS-lab3/kernel/src/signal/: mod.rs
NeoOS-lab3/kernel/src/sync/: mutex.rs
NeoOS-lab3/mem/src/: buddy_allocator.rs  lib.rs
NeoOS-lab4/: .gitignore  Cargo.toml  Makefile  README.md  boot.cfg  test_jump.S
NeoOS-lab4/doc/zh/src/: chapter_1_preparations.md  chapter_2_bootloader.md
NeoOS-lab4/kernel/: Cargo.toml  linker.ld
NeoOS-lab4/kernel/src/: banner.txt  elf.rs  f64.rs  logging.rs  memory.rs  trigger.rs
NeoOS-lab4/kernel/src/arch/x86_64/: cpu.rs  io.rs  mod.rs  timer.rs
NeoOS-lab4/kernel/src/arch/x86_64/interrupt/: timer.rs
NeoOS-lab4/kernel/src/arch/x86_64/mm/: paging.rs
NeoOS-lab4/kernel/src/drivers/: mod.rs  rtc.rs
NeoOS-lab4/kernel/src/drivers/isomorphic_drivers/net/ethernet/intel/: ixgbe.rs
NeoOS-lab4/kernel/src/fs/: mod.rs
NeoOS-lab4/kernel/src/fs/devfs/: null.rs  random.rs  zero.rs
NeoOS-lab4/kernel/src/fs/proc/: mod.rs
NeoOS-lab4/kernel/src/fs/sfs/: README.md  mod.rs
NeoOS-lab4/kernel/src/irq/: mod.rs
NeoOS-lab4/kernel/src/net/: mod.rs  raw.rs  tcp.rs  udp.rs
NeoOS-lab4/kernel/src/process/: event.rs  mod.rs  thread.rs
NeoOS-lab4/kernel/src/sync/: raw_mutex.rs
NeoOS-lab4/kernel/src/syscall/: id.rs  mem.rs  mod.rs  signal.rs
NeoOS-lab4/kernel/src/utils/: ptr.rs
NeoOS-lab4/sample_programs/: common.mk
NeoOS-lab4/sample_programs/nginx/: Makefile  nginx.conf
NeoOS-lab4/sample_programs/rust/: Cargo.toml  Makefile
NeoOS-lab4/sample_programs/rust/hello_rust/: Cargo.toml
NeoOS-lab4/sample_programs/simple_c/: main.c
NeoOS-lab4/sample_programs/simple_tcp/: defs.h  server.c
NeoOS-lab4/sample_programs/tests/: Makefile  dylib.c  fs.c
NeoOS-lab4/tools/: Cargo.toml  networking.sh  prepare_darwin.sh
NeoOS-lab4/tools/tcp_ip/: Cargo.toml
boot/: Cargo.toml
boot/src/: header.rs  lib.rs  main.rs  memmap.rs  page_table.rs  utils.rs
boot_header/: Cargo.toml
boot_header/src/: lib.rs
doc/en/: book.toml
doc/zh/: book.toml
doc/zh/src/: SUMMARY.md  chapter_1_preparations.md  chapter_2.md  chapter_2_bootloader.md
image/: Cargo.toml
image/src/: header.rs  lib.rs  main.rs  page_table.rs  utils.rs
kernel/: Cargo.toml  build.rs  linker.ld  x86_64.json
kernel/src/: banner.txt  debug.rs  elf.rs  error.rs  f64.rs  lib.rs  logging.rs  main.rs  memory.rs  time.rs  trigger.rs
kernel/src/arch/x86_64/: acpi.rs  apic.rs  cpu.rs  gdt.rs  io.rs  mod.rs  pit.rs  signal.rs  timer.rs
kernel/src/arch/x86_64/apic/: ap.rs  ioapic.rs  mod.rs  x2apic.rs  xapic.rs
kernel/src/arch/x86_64/boot/: ap_trampoline.S  header.rs  main.rs  mod.rs
kernel/src/arch/x86_64/interrupt/: dispatcher.rs  gdt.rs  idt.rs  idt_vectors.S  ipi.rs  mod.rs  syscall.S  syscall.rs  timer.rs  trap.S
kernel/src/arch/x86_64/mm/: mod.rs  paging.rs
kernel/src/drivers/: block.rs  intel_100e.rs  intel_e1000.rs  keyboard.rs  mod.rs  pci_bus.rs  rtc.rs  serial.rs
kernel/src/drivers/isomorphic_drivers/block/: ahci.rs
kernel/src/drivers/isomorphic_drivers/net/ethernet/intel/: e1000.rs  ixgbe.rs
kernel/src/fs/: devfs.rs  epoll.rs  file.rs  mod.rs  sfs.rs  vfs.rs
kernel/src/fs/apfs/: meta.rs  mod.rs
kernel/src/fs/devfs/: mod.rs  null.rs  random.rs  serial.rs  tty.rs  zero.rs
kernel/src/fs/proc/: maps.rs  mod.rs
kernel/src/fs/sfs/: README.md  mod.rs
kernel/src/irq/: mod.rs
kernel/src/mm/: callback.rs  mod.rs
kernel/src/net/: mod.rs  raw.rs  tcp.rs  udp.rs
kernel/src/process/: ld.rs  mod.rs  scheduler.rs  thread.rs
kernel/src/signal/: mod.rs
kernel/src/sync/: condvar.rs  futex.rs  mod.rs  mutex.rs
kernel/src/sys/: mod.rs
kernel/src/syscall/: fs.rs  mem.rs  mod.rs  net.rs  others.rs  process.rs  signal.rs
kernel/src/utils/: mod.rs  ptr.rs
mem/src/: buddy_allocator.rs
sample_programs/: Makefile  README.md  common.mk
sample_programs/busybox-musl/: Makefile
sample_programs/nginx/: Makefile  nginx.conf
sample_programs/rust/: Cargo.toml  Makefile  x86_64-unknown-neoos-musl.json
sample_programs/rust/hello_rust/: output.S
sample_programs/rust/hello_rust/src/: main.rs
sample_programs/rust/rustlib/: Cargo.toml
sample_programs/rust/rustlib/src/: lib.rs
sample_programs/rust/src/: main.rs
sample_programs/rustlib/: Cargo.toml  x86_64-unknown-neoos-musl.json
sample_programs/rustlib/.cargo/: config
sample_programs/rustlib/src/: io.rs  lib.rs
sample_programs/simple_c/: Makefile  main.c
sample_programs/simple_tcp/: Makefile  client.c
sample_programs/syscall_tests/: Makefile  dylib_dependee.c  fs.c  malloc.c
sample_programs/tests/: Makefile  dylib_dependee.c  malloc.c
tools/tcp_ip/src/: main.rs
答辩文档/: 能润就行南开大学.pptx
(+31 files in other folders)
