[package]
name = "boot"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
backtrace = { version = "0.3.66", default-features = false }
boot_header = { path = "../boot_header" }
log = "*"
spin = "0.9.5"
uart_16550 = "0.2.18"
uefi = "0.19.1"
uefi-services = { version = "0.16.0", features = ["logger"] }
x86_64 = "0.14.10"
xmas-elf = "0.9.0"

[features]
default = ["multiprocessor"]
multiprocessor = []
