[package]
name = "NeoOSImage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
uefi = { version = "0.18.0" }
uefi-services = { version = "0.15.0", features = ["logger"] }
xmas-elf = "0.9.0"
x86_64 = "0.14.10"
