[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acpi = "4.1.1"
atomic_enum = "0.2.0"
bit_field = "0.10.1"
buddy_system_allocator = { version = "0.8.0", features = ["const_fn"] }
boot_header = { path = "../boot_header" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4"
pc-keyboard = "0.6.1"
raw-cpuid = "10.6.0"
spin = "0.9.4"
uart_16550 = "0.2.18"
x86_64 = { version = "0.14.10", features = ["abi_x86_interrupt"] }
x86 = "0.52.0"

[build-dependencies]
cc = "1.0"
