[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["multiprocessor"]
multiprocessor = []

[dependencies]
acpi = "4.1.1"
apic = { git = "https://github.com/rcore-os/apic-rs.git" }
atomic_enum = "0.2.0"
bitflags = "1.3.2"
bit_field = "0.10.1"
bitvec = { version = "1.0.1", default-features = false, features = [
  "atomic",
  "alloc",
] }
buddy_system_allocator = { version = "0.8.0", features = ["const_fn"] }
boot_header = { path = "../boot_header" }
chrono = { version = "0.4.23", default-features = false, features = ["alloc"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4"
num-traits = { version = "0.2", default-features = false }
pci = { git = "https://github.com/hiroki-chen/pci-rs.git" }
pc-keyboard = "0.6.1"
raw-cpuid = "10.6.0"
spin = { version = "0.9.5", default-features = false, features = ['rwlock'] }
uart_16550 = "0.2.18"
volatile = "0.3"
x86_64 = { version = "0.14.10", features = ["abi_x86_interrupt"] }
x86 = "0.52.0"
memchr = { version = "2.5.0", default-features = false }
libm = "0.2.6"
atomic_float = "0.1.0"

[build-dependencies]
cc = "1.0"
rustc_version = "0.4.0"
