[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["multiprocessor", "sfs", "apfs", "mount_apfs", "raw_socket"]
# TODO: separate as a single library.
apfs = []
# Allow write to the APFS (needs BTree support).
apfs_write = []
# Simple file system.
sfs = []
mount_apfs = []
mount_sfs = []
multiprocessor = []
x2apic = []
raw_socket = []
linux_gateway = []

[dependencies]
acpi = "4.1.1"
addr2line = { version = "0.19.0", default-features = false, features = [
  "rustc-demangle",
  "object",
] }
atomic_enum = "0.2.0"
bit_field = "0.10.1"
bitflags = "1.3.2"
bitvec = { version = "1.0.1", default-features = false, features = [
  "atomic",
  "alloc",
] }
boot_header = { path = "../boot_header" }
buddy_system_allocator = { version = "0.8.0", features = ["const_fn"] }
cfg-if = { version = "1.0.0" }
chrono = { version = "0.4.23", default-features = false, features = ["alloc"] }
crc = "3.0.1"
goblin = { version = "0.6.1", default-features = false, features = [
  "archive",
  "endian_fd",
  "elf64",
  "elf32",
] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
libm = "0.2.6"
log = "0.4"
memchr = { version = "2.5.0", default-features = false }
num-traits = { version = "0.2", default-features = false }
num_enum = { version = "0.6.0", default-features = false }
pc-keyboard = "0.6.1"
pci = { git = "https://github.com/hiroki-chen/pci-rs.git" }
raw-cpuid = "10.6.0"
rcore-fs = { git = "https://github.com/hiroki-chen/rcore-fs.git" }
rcore-fs-mountfs = { git = "https://github.com/hiroki-chen/rcore-fs.git" }
ringbuf = { version = "0.3.2", default-features = false, features = ["alloc"] }
serde = { version = "1.0.155", default-features = false, features = [
  "alloc",
  "derive",
] }
smoltcp = { version = "0.9.1", default-features = false, features = [
  "proto-ipv4",
  "alloc",
  "log",
  "medium-ethernet",
  "socket-raw",
  "socket-icmp",
  "socket-udp",
  "socket-tcp",
] }
spin = { version = "0.9.5", default-features = false, features = [
  'rwlock',
  'once',
] }
uart_16550 = "0.2.18"
unicode-normalization = { version = "0.1.22", default-features = false }
unwinding = { version = "0.1.5", default-features = false, features = [
  "unwinder",
  "fde-static",
  "personality",
  "panic",
] }
volatile = "0.3"
woke = "0.0.4"
x86 = "0.52.0"
x86_64 = { version = "0.14.10", features = ["abi_x86_interrupt"] }

[build-dependencies]
cc = "1.0"
rustc_version = "0.4.0"
