[package]
name = "neo_std"
version = "0.1.0"
edition = "2021"

[lib]
name = "neo_std"
crate-type = ["staticlib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = { version = "0.9.0", features = ["const_fn"] }
log = { version = "0.4.17", default-features = false }
